--- a/estimating-stochastic-effects.html
+++ b/estimating-stochastic-effects.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Chapter 7 Estimation of stochastic (in)direct effects | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
+<title>Chapter 7 Estimating stochastic effects | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
 <meta name="author" content="Iván Díaz, Nima Hejazi, Kara Rudolph">
 <!-- JS --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.2"></script><script src="https://kit.fontawesome.com/6ecbd6c532.js" crossorigin="anonymous"></script><script src="libs/jquery-3.5.1/jquery-3.5.1.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet">
@@ -49,8 +49,8 @@
 <li><a class="" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
 <li><a class="" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
 <li><a class="" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
-<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
-<li><a class="active" href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li>
+<li><a class="" href="estimating-natural-and-interventional-effects.html"><span class="header-section-number">6</span> Estimating natural and interventional effects</a></li>
+<li><a class="active" href="estimating-stochastic-effects.html"><span class="header-section-number">7</span> Estimating stochastic effects</a></li>
 <li><a class="" href="references.html">References</a></li>
 </ul>
 
@@ -59,19 +59,19 @@
         </div>
       </nav>
 </div>
-  </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><div id="estimation-of-stochastic-indirect-effects" class="section level1">
+  </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><div id="estimating-stochastic-effects" class="section level1">
 <h1>
-<span class="header-section-number">7</span> Estimation of stochastic (in)direct effects<a class="anchor" aria-label="anchor" href="#estimation-of-stochastic-indirect-effects"><i class="fas fa-link"></i></a>
+<span class="header-section-number">7</span> Estimating stochastic effects<a class="anchor" aria-label="anchor" href="#estimating-stochastic-effects"><i class="fas fa-link"></i></a>
 </h1>
 <p>[TO FILL IN]</p>
 
 </div>
   <div class="chapter-nav">
-<div class="prev"><a href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></div>
+<div class="prev"><a href="estimating-natural-and-interventional-effects.html"><span class="header-section-number">6</span> Estimating natural and interventional effects</a></div>
 <div class="next"><a href="references.html">References</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#estimation-of-stochastic-indirect-effects"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li></ul>
+      <ul class="nav navbar-nav"><li><a class="nav-link" href="#estimating-stochastic-effects"><span class="header-section-number">7</span> Estimating stochastic effects</a></li></ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
