--- a/mediation.html
+++ b/mediation.html
@@ -49,8 +49,8 @@
 <li><a class="" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
 <li><a class="" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
 <li><a class="" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
-<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
-<li><a class="" href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li>
+<li><a class="" href="estimating-natural-and-interventional-effects.html"><span class="header-section-number">6</span> Estimating natural and interventional effects</a></li>
+<li><a class="" href="estimating-stochastic-effects.html"><span class="header-section-number">7</span> Estimating stochastic effects</a></li>
 <li><a class="" href="references.html">References</a></li>
 </ul>
 
@@ -75,7 +75,7 @@ the effects of interest. We will focus on the two types of graph:</p>
 </h3>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-1"></span>
-<img src="01-preface_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+<img src="01-preface_files/figure-html/unnamed-chunk-1-1.pdf" alt="Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
 FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
 </p>
 </div>
@@ -86,7 +86,7 @@ FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of
 </h3>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-2"></span>
-<img src="01-preface_files/figure-html/unnamed-chunk-2-1.png" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+<img src="01-preface_files/figure-html/unnamed-chunk-2-1.pdf" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
 FIGURE 1.2: Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment
 </p>
 </div>
