--- a/interventional.html
+++ b/interventional.html
@@ -49,8 +49,8 @@
 <li><a class="active" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
 <li><a class="" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
 <li><a class="" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
-<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
-<li><a class="" href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li>
+<li><a class="" href="estimating-natural-and-interventional-effects.html"><span class="header-section-number">6</span> Estimating natural and interventional effects</a></li>
+<li><a class="" href="estimating-stochastic-effects.html"><span class="header-section-number">7</span> Estimating stochastic effects</a></li>
 <li><a class="" href="references.html">References</a></li>
 </ul>
 
@@ -70,7 +70,7 @@
 <p>Consider the following directed acyclic graph.</p>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-6"></span>
-<img src="02-effects-def_files/figure-html/unnamed-chunk-6-1.png" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+<img src="02-effects-def_files/figure-html/unnamed-chunk-6-1.pdf" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
 FIGURE 3.1: Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment
 </p>
 </div>
@@ -122,7 +122,12 @@ variable in a hypothetical world where <span class="math inline">\(A\)</span> is
 set to <span class="math inline">\(M=G(0)\)</span> with porbability one.</li>
 <li>Define <span class="math inline">\(Y(0,G(0))\)</span> and <span class="math inline">\(Y(1,G(1))\)</span> similarly</li>
 <li>Then we can define:
-<span class="math display">\[\E[Y(1,G(1)) - Y(0,G(0))]=\underbrace{\E[Y(1,G(1))-Y(1,G(0))]}_{\text{interventional indirect effect}}+\underbrace{\E[Y(1,G(0))-Y(0,G(0))]}_{\text{interventional direct effect}}\]</span>
+<span class="math display">\[\begin{equation*}
+  \E[Y(1,G(1)) - Y(0,G(0))] = \underbrace{\E[Y(1,G(1)) -
+    Y(1,G(0))]}_{\text{interventional indirect effect}} +
+    \underbrace{\E[Y(1,G(0)) -
+    Y(0,G(0))]}_{\text{interventional direct effect}}
+\end{equation*}\]</span>
 </li>
 </ul>
 </div>
