--- a/stochastic.html
+++ b/stochastic.html
@@ -49,8 +49,8 @@
 <li><a class="" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
 <li><a class="" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
 <li><a class="active" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
-<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
-<li><a class="" href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li>
+<li><a class="" href="estimating-natural-and-interventional-effects.html"><span class="header-section-number">6</span> Estimating natural and interventional effects</a></li>
+<li><a class="" href="estimating-stochastic-effects.html"><span class="header-section-number">7</span> Estimating stochastic effects</a></li>
 <li><a class="" href="references.html">References</a></li>
 </ul>
 
@@ -70,7 +70,7 @@
 <p>Consider the following directed acyclic graph.</p>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-1"></span>
-<img src="04-stochastic_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acylcic graph under _no intermediate confounders_ of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+<img src="04-stochastic_files/figure-html/unnamed-chunk-1-1.pdf" alt="Directed acylcic graph under _no intermediate confounders_ of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
 FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
 </p>
 </div>
@@ -88,7 +88,7 @@ FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></div>
-<div class="next"><a href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></div>
+<div class="next"><a href="estimating-natural-and-interventional-effects.html"><span class="header-section-number">6</span> Estimating natural and interventional effects</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
