nhejazi published a site update

--- a/interventional.html
+++ b/interventional.html
@@ -70,7 +70,7 @@
 <p>Consider the following directed acyclic graph.</p>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-6"></span>
-<img src="02-effects-def_files/figure-html/unnamed-chunk-6-1.pdf" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+<img src="02-effects-def_files/figure-html/unnamed-chunk-6-1.png" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
 FIGURE 3.1: Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment
 </p>
 </div>
