--- a/mediation.html
+++ b/mediation.html
@@ -75,7 +75,7 @@ the effects of interest. We will focus on the two types of graph:</p>
 </h3>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-1"></span>
-<img src="01-preface_files/figure-html/unnamed-chunk-1-1.pdf" alt="Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+<img src="01-preface_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
 FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
 </p>
 </div>
@@ -86,7 +86,7 @@ FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of
 </h3>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-2"></span>
-<img src="01-preface_files/figure-html/unnamed-chunk-2-1.pdf" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+<img src="01-preface_files/figure-html/unnamed-chunk-2-1.png" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
 FIGURE 1.2: Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment
 </p>
 </div>
