--- a/stochastic.html
+++ b/stochastic.html
@@ -70,7 +70,7 @@
 <p>Consider the following directed acyclic graph.</p>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-1"></span>
-<img src="04-stochastic_files/figure-html/unnamed-chunk-1-1.pdf" alt="Directed acylcic graph under _no intermediate confounders_ of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+<img src="04-stochastic_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acylcic graph under _no intermediate confounders_ of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
 FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
 </p>
 </div>
