nhejazi published a site update

--- a/estimands.html
+++ b/estimands.html
@@ -72,7 +72,9 @@
 <h2>
 <span class="header-section-number">2.1</span> Controlled direct effects<a class="anchor" aria-label="anchor" href="#controlled-direct-effects"><i class="fas fa-link"></i></a>
 </h2>
-<p><span class="math display">\[  \psi_{\text{CDE}} = \E(Y_{1,m}) - \E(Y_{0,m}) \]</span></p>
+<p><span class="math display">\[\begin{equation*}
+  \psi_{\text{CDE}} = \E(Y_{1,m}) - \E(Y_{0,m})
+\end{equation*}\]</span></p>
 <ul>
 <li>Set <span class="math inline">\(M=m\)</span> uniformly for everyone in the population</li>
 <li>Compare <span class="math inline">\(A=1\)</span> vs <span class="math inline">\(A=0\)</span> with <span class="math inline">\(M=m\)</span> fixed</li>
@@ -89,7 +91,8 @@
 </ul>
 </li>
 </ul>
-<embed src="/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/graphic4a3.pdf" width="50%" style="display: block; margin: auto;" type="application/pdf"></embed><div id="is-this-the-estimand-i-want" class="section level3 unnumbered">
+<div class="inline-figure"><img src="img/graphic4a3.png" width="50%" style="display: block; margin: auto;"></div>
+<div id="is-this-the-estimand-i-want" class="section level3 unnumbered">
 <h3>Is this the estimand I want?<a class="anchor" aria-label="anchor" href="#is-this-the-estimand-i-want"><i class="fas fa-link"></i></a>
 </h3>
 <ul>
@@ -126,7 +129,8 @@ ID: The below is only true if the cross-world assumption holds
 <li>Weighted average of controlled direct effects at each level of <span class="math inline">\(m\)</span>.</li>
 <li>If no interaction between <span class="math inline">\(A\)</span> and <span class="math inline">\(M\)</span> on <span class="math inline">\(Y\)</span>, then CDE = NDE.</li>
 </ul>
-<embed src="/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/graphic4a.pdf" width="50%" style="display: block; margin: auto;" type="application/pdf"></embed><div id="identification-assumptions" class="section level3">
+<div class="inline-figure"><img src="img/graphic4a.png" width="50%" style="display: block; margin: auto;"></div>
+<div id="identification-assumptions" class="section level3">
 <h3>
 <span class="header-section-number">2.1.1</span> Identification assumptions:<a class="anchor" aria-label="anchor" href="#identification-assumptions"><i class="fas fa-link"></i></a>
 </h3>
@@ -164,7 +168,8 @@ NH: Should we mention cross-world indep and indentifiability issues in RCTs?
 </ul>
 <p><em>What if our data structure involves a post-treatment confounder of the
 mediator-outcome relationship (e.g., adherence)?</em></p>
-<embed src="/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/medDAG2.pdf" width="20%" style="display: block; margin: auto;" type="application/pdf"></embed><embed src="/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/ctndag.pdf" width="50%" style="display: block; margin: auto;" type="application/pdf"></embed>
+<div class="inline-figure"><img src="img/medDAG2.png" width="75%" style="display: block; margin: auto;"></div>
+<div class="inline-figure"><img src="img/ctndag.png" width="100%" style="display: block; margin: auto;"></div>
 </div>
 </div>
 <div id="interventional-direct-indirect-effects" class="section level2 unnumbered">
@@ -187,7 +192,8 @@ probability <span class="math inline">\(\P(M = m \mid Z, A = a^{\star}, W = w)\)
 <li>Can you think of an example when you would want the conditional versions?
 Marginal versions?</li>
 </ul>
-<embed src="/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/graphic4b.pdf" width="50%" style="display: block; margin: auto;" type="application/pdf"></embed><div id="identification-assumptions-1" class="section level3">
+<div class="inline-figure"><img src="img/graphic4b.png" width="50%" style="display: block; margin: auto;"></div>
+<div id="identification-assumptions-1" class="section level3">
 <h3>
 <span class="header-section-number">2.1.3</span> Identification assumptions:<a class="anchor" aria-label="anchor" href="#identification-assumptions-1"><i class="fas fa-link"></i></a>
 </h3>
@@ -209,7 +215,8 @@ effect.</li>
 <div id="estimand-summary" class="section level2 unnumbered">
 <h2>Estimand Summary<a class="anchor" aria-label="anchor" href="#estimand-summary"><i class="fas fa-link"></i></a>
 </h2>
-<embed src="/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/table1.pdf" width="100%" style="display: block; margin: auto;" type="application/pdf"></embed><!--
+<div class="inline-figure"><img src="img/table1.png" width="125%" style="display: block; margin: auto;"></div>
+<!--
 ID: Kara, I copied what I had written below, feel free to reuse
 -->
 </div>
@@ -251,7 +258,7 @@ ID: Kara, I copied what I had written below, feel free to reuse
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 26, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 27, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
