--- a/estimating-natural-and-interventional-effects.html
+++ b/estimating-natural-and-interventional-effects.html
@@ -68,7 +68,8 @@
 <span class="header-section-number">6.1</span> Natural (in)direct effects<a class="anchor" aria-label="anchor" href="#natural-indirect-effects"><i class="fas fa-link"></i></a>
 </h2>
 <p>Recall:</p>
-<embed src="/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/meddagnoz.pdf" width="50%" style="display: block; margin: auto;" type="application/pdf"></embed><p>Assuming a binary <span class="math inline">\(A\)</span>, we define the natural direct effect as:
+<div class="inline-figure"><img src="img/meddagnoz.png" width="50%" style="display: block; margin: auto;"></div>
+<p>Assuming a binary <span class="math inline">\(A\)</span>, we define the natural direct effect as:
 <span class="math display">\[NDE = E(Y_{1,M_{0}}) - E(Y_{0,M_{0}})\]</span>,</p>
 <p>and the natural indirect effect as:
 <span class="math display">\[NIE = E(Y_{1,M_{1}}) - E(Y_{1,M_{0}})\]</span>.</p>
@@ -237,7 +238,8 @@ TML estimate of the NDE.</li>
 <span class="header-section-number">6.2</span> Interventional direct and indirect effects<a class="anchor" aria-label="anchor" href="#interventional-direct-and-indirect-effects"><i class="fas fa-link"></i></a>
 </h2>
 <p>Recall:</p>
-<embed src="/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/medDAG2.pdf" width="50%" style="display: block; margin: auto;" type="application/pdf"></embed><p>We define the interventional direct effect as:
+<div class="inline-figure"><img src="img/medDAG2.png" width="50%" style="display: block; margin: auto;"></div>
+<p>We define the interventional direct effect as:
 <span class="math display">\[\begin{equation*}
   \psi_{\text{PIDE}} = \E(Y_{a^\prime,g_{M \mid a^\star,W}}) -
     \E(Y_{a\star,g_{M \mid a^\star,W}}),
@@ -597,7 +599,7 @@ this next.</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 26, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 27, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
