--- a/stochastic.html
+++ b/stochastic.html
@@ -70,8 +70,8 @@
 <p>Consider the following directed acyclic graph.</p>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-1"></span>
-<img src="04-stochastic_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acylcic graph under _no intermediate confounders_ of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
-FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
+<img src="04-stochastic_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acylcic graph under no intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+FIGURE 1.1: Directed acylcic graph under no intermediate confounders of the mediator-outcome relation affected by treatment
 </p>
 </div>
 </div>
@@ -112,7 +112,7 @@ FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 26, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 27, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
