--- a/estimands.html
+++ b/estimands.html
@@ -92,8 +92,9 @@
 </li>
 </ul>
 <div class="inline-figure"><img src="img/graphic4a3.png" width="50%" style="display: block; margin: auto;"></div>
-<div id="is-this-the-estimand-i-want" class="section level3 unnumbered">
-<h3>Is this the estimand I want?<a class="anchor" aria-label="anchor" href="#is-this-the-estimand-i-want"><i class="fas fa-link"></i></a>
+<div id="is-this-the-estimand-i-want" class="section level3">
+<h3>
+<span class="header-section-number">2.1.1</span> Is this the estimand I want?<a class="anchor" aria-label="anchor" href="#is-this-the-estimand-i-want"><i class="fas fa-link"></i></a>
 </h3>
 <ul>
 <li>Makes the most sense if can intervene directly on <span class="math inline">\(M\)</span>
@@ -112,8 +113,9 @@ mediator?</em></p>
 <p><em>What if we want to decompose the average treatment effect into its direct and indirect counterparts?</em></p>
 </div>
 </div>
-<div id="natural-direct-and-indirect-effects" class="section level2 unnumbered">
-<h2>Natural direct and indirect effects<a class="anchor" aria-label="anchor" href="#natural-direct-and-indirect-effects"><i class="fas fa-link"></i></a>
+<div id="natural-direct-and-indirect-effects" class="section level2">
+<h2>
+<span class="header-section-number">2.2</span> Natural direct and indirect effects<a class="anchor" aria-label="anchor" href="#natural-direct-and-indirect-effects"><i class="fas fa-link"></i></a>
 </h2>
 <p>Natural direct effect (NDE):
 <span class="math display">\[  \psi_{\text{NDE}} = \E(Y_{1,M_0}) - \E(Y_{0,M_0}) \]</span></p>
@@ -132,7 +134,7 @@ ID: The below is only true if the cross-world assumption holds
 <div class="inline-figure"><img src="img/graphic4a.png" width="50%" style="display: block; margin: auto;"></div>
 <div id="identification-assumptions" class="section level3">
 <h3>
-<span class="header-section-number">2.1.1</span> Identification assumptions:<a class="anchor" aria-label="anchor" href="#identification-assumptions"><i class="fas fa-link"></i></a>
+<span class="header-section-number">2.2.1</span> Identification assumptions:<a class="anchor" aria-label="anchor" href="#identification-assumptions"><i class="fas fa-link"></i></a>
 </h3>
 <ul>
 <li><span class="math inline">\(A \indep Y_{a,m} \mid W\)</span></li>
@@ -153,7 +155,7 @@ almost always), we are violating this assumption.</li>
 </div>
 <div id="is-this-the-estimand-i-want-1" class="section level3">
 <h3>
-<span class="header-section-number">2.1.2</span> Is this the estimand I want?<a class="anchor" aria-label="anchor" href="#is-this-the-estimand-i-want-1"><i class="fas fa-link"></i></a>
+<span class="header-section-number">2.2.2</span> Is this the estimand I want?<a class="anchor" aria-label="anchor" href="#is-this-the-estimand-i-want-1"><i class="fas fa-link"></i></a>
 </h3>
 <ul>
 <li>Makes sense to intervene on <span class="math inline">\(A\)</span> but not directly on <span class="math inline">\(M\)</span>.</li>
@@ -172,8 +174,9 @@ mediator-outcome relationship (e.g., adherence)?</em></p>
 <div class="inline-figure"><img src="img/ctndag.png" width="100%" style="display: block; margin: auto;"></div>
 </div>
 </div>
-<div id="interventional-direct-indirect-effects" class="section level2 unnumbered">
-<h2>Interventional direct/ indirect effects<a class="anchor" aria-label="anchor" href="#interventional-direct-indirect-effects"><i class="fas fa-link"></i></a>
+<div id="interventional-indirect-effects" class="section level2">
+<h2>
+<span class="header-section-number">2.3</span> Interventional (in)direct effects<a class="anchor" aria-label="anchor" href="#interventional-indirect-effects"><i class="fas fa-link"></i></a>
 </h2>
 <ul>
 <li>Fully conditional on past</li>
@@ -195,7 +198,7 @@ Marginal versions?</li>
 <div class="inline-figure"><img src="img/graphic4b.png" width="50%" style="display: block; margin: auto;"></div>
 <div id="identification-assumptions-1" class="section level3">
 <h3>
-<span class="header-section-number">2.1.3</span> Identification assumptions:<a class="anchor" aria-label="anchor" href="#identification-assumptions-1"><i class="fas fa-link"></i></a>
+<span class="header-section-number">2.3.1</span> Identification assumptions:<a class="anchor" aria-label="anchor" href="#identification-assumptions-1"><i class="fas fa-link"></i></a>
 </h3>
 <ul>
 <li><span class="math inline">\(A \indep Y_{a,m} \mid W\)</span></li>
@@ -212,8 +215,9 @@ effect.</li>
 </ul>
 </div>
 </div>
-<div id="estimand-summary" class="section level2 unnumbered">
-<h2>Estimand Summary<a class="anchor" aria-label="anchor" href="#estimand-summary"><i class="fas fa-link"></i></a>
+<div id="estimand-summary" class="section level2">
+<h2>
+<span class="header-section-number">2.4</span> Estimand Summary<a class="anchor" aria-label="anchor" href="#estimand-summary"><i class="fas fa-link"></i></a>
 </h2>
 <div class="inline-figure"><img src="img/table1.png" width="125%" style="display: block; margin: auto;"></div>
 <!--
@@ -229,18 +233,18 @@ ID: Kara, I copied what I had written below, feel free to reuse
       <ul class="nav navbar-nav">
 <li><a class="nav-link" href="#estimands"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></li>
 <li>
-<a class="nav-link" href="#controlled-direct-effects"><span class="header-section-number">2.1</span> Controlled direct effects</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#is-this-the-estimand-i-want">Is this the estimand I want?</a></li></ul>
+<a class="nav-link" href="#controlled-direct-effects"><span class="header-section-number">2.1</span> Controlled direct effects</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#is-this-the-estimand-i-want"><span class="header-section-number">2.1.1</span> Is this the estimand I want?</a></li></ul>
 </li>
 <li>
-<a class="nav-link" href="#natural-direct-and-indirect-effects">Natural direct and indirect effects</a><ul class="nav navbar-nav">
-<li><a class="nav-link" href="#identification-assumptions"><span class="header-section-number">2.1.1</span> Identification assumptions:</a></li>
-<li><a class="nav-link" href="#is-this-the-estimand-i-want-1"><span class="header-section-number">2.1.2</span> Is this the estimand I want?</a></li>
+<a class="nav-link" href="#natural-direct-and-indirect-effects"><span class="header-section-number">2.2</span> Natural direct and indirect effects</a><ul class="nav navbar-nav">
+<li><a class="nav-link" href="#identification-assumptions"><span class="header-section-number">2.2.1</span> Identification assumptions:</a></li>
+<li><a class="nav-link" href="#is-this-the-estimand-i-want-1"><span class="header-section-number">2.2.2</span> Is this the estimand I want?</a></li>
 </ul>
 </li>
 <li>
-<a class="nav-link" href="#interventional-direct-indirect-effects">Interventional direct/ indirect effects</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#identification-assumptions-1"><span class="header-section-number">2.1.3</span> Identification assumptions:</a></li></ul>
+<a class="nav-link" href="#interventional-indirect-effects"><span class="header-section-number">2.3</span> Interventional (in)direct effects</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#identification-assumptions-1"><span class="header-section-number">2.3.1</span> Identification assumptions:</a></li></ul>
 </li>
-<li><a class="nav-link" href="#estimand-summary">Estimand Summary</a></li>
+<li><a class="nav-link" href="#estimand-summary"><span class="header-section-number">2.4</span> Estimand Summary</a></li>
 </ul>
 
       <div class="book-extra">
